Refactor: Rename DNS to NRS (Name Resolution System) globally
